# quant-terminal

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml
src/: action.rs  app.rs  backtest.rs  config.rs  event.rs  logging.rs  main.rs  snapshot.rs  tui.rs  update.rs
src/analytics/: mod.rs  options.rs  quant.rs  series.rs  stats.rs
src/command/: mod.rs
src/data/: ibkr.rs  manager.rs  mod.rs  simulated.rs  types.rs
src/ui/: backtest.rs  chart.rs  mod.rs  optimizer.rs  options.rs  portfolio.rs  risk.rs  theme.rs
